trying to make positions relative to fix overlap

--- a/attack-theme/static/style/_layouts.scss
+++ b/attack-theme/static/style/_layouts.scss
@@ -1134,11 +1134,11 @@ pre {
 /******/
 
 @media print {
-    .table, .techniques-used, .card-block, .table-mitigations, .table-techniques, .datasources-table {
+    .table, .techniques-used, .card-block, .table-mitigations, .table-techniques, .datasources-table, .expand-panel {
         overflow: visible !important;
         break-before: always !important;
         page-break-inside: avoid !important;
-        position: static !important;
+        position: relative !important;
         height: 90% !important;
     }
 }
